tests/ui/macros/println-percent-prefix-num-issue-125002.rs
fn main() {
    println!("%100000", 1);
    //~^ ERROR argument never used
    println!("%     65536", 1);
    //~^ ERROR argument never used
}
